Fix Firefox overflow

--- a/src/index.css
+++ b/src/index.css
@@ -57,45 +57,6 @@
     }
 }
 
-
-
-
-.olTool {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.5);
-  filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px rgba(255, 255, 255, 0.5);
-  bottom: 12px;
-  left: -50px;
-  min-width: 150px;
-  white-space: nowrap;
-  font: 12pt sans-serif;
-}
-
-.olTool:after, .olTool:before {
-  top: 100%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-.olTool:after {
-  border-top-color: rgba(255, 255, 255, 0.5);
-  border-width: 10px;
-  left: 40px;
-  margin-left: -10px;
-}
-.olTool:before {
-  border-top-color: rgba(255, 255, 255, 0.5);
-  border-width: 11px;
-  left: 40px;
-  margin-left: -11px;
-}
-
 #deroulant{
   position: absolute;
   top: 25px;
