--- a/src/stylesheets/modules/_layout.scss
+++ b/src/stylesheets/modules/_layout.scss
@@ -5,6 +5,7 @@ body, #root, #layout {
 #layout {
   @extend %flexbox;
   @include flex-direction(column);
+  overflow: hidden;
   main {
     @extend %flexbox;
     @include flex(1);
