--- a/src/stylesheets/modules/_map.scss
+++ b/src/stylesheets/modules/_map.scss
@@ -1,5 +1,8 @@
-canvas:active {
-  cursor: move;
+canvas{
+  :active {
+    cursor: move;
+  }
+  height: 100% !important;
 }
 .map-wrapper, .map {
   height: 100%;
